# cred-claude

./: .gitignore  LICENSE  README.md  build_app.sh  install.sh  monitor.py  pyproject.toml  setup.py  uninstall.sh
credclaude/: __init__.py  __main__.py  app.py  auth_launcher.py  billing.py  config.py  cost_engine.py  default_pricing.json  formatting.py  ingestion.py  keepalive.py  limit_providers.py  models.py  notifications.py  preferences.py  settings.py  time_utils.py
notes/: 00_overview.md  01_features.md  02_design_system.md  03_architecture.md  04_auth_and_roles.md  05_database_schema.md  06_api_contracts.md  07_user_flows.md  08_pages_and_routes.md  09_dev_setup.md  10_deployment.md  11_known_issues.md  12_roadmap.md  13_prompt_context.md
tests/: conftest.py  test_app.py  test_auth_launcher.py  test_billing.py  test_config.py  test_cost_engine.py  test_formatting.py  test_ingestion.py  test_keepalive.py  test_limit_providers.py
